@@ -40,6 +40,7 @@
    - myProgressBar: migrate to G_ADD_PRIVATE (todo #994).
    - ofaButtonsBox: migrate to G_ADD_PRIVATE (todo #994).
    - ofaDateFilterHVBin: migrate to G_ADD_PRIVATE (todo #994).
+   - ofaFileFormat: migrate to G_ADD_PRIVATE (todo #994).
 
 -----------------------------------------------------------------------
  Version 0.48
